Fix send menu visibility on iphone

--- a/src/components/send/styles.css
+++ b/src/components/send/styles.css
@@ -38,11 +38,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 10;
-
-    &.isHidden {
-      display: none;
-    }
+    z-index: 5;
   }
 
   .mobileMenuItem {
